# crack-tracer

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md  asm_output.s  perf.data  perf.data.old
cmd/: clean.sh  dbuild.sh  dconfigure.sh  drun.sh  format.sh  gen_asmd.sh  gen_asmr.sh  perf.data  perf.data.old  perf_record.sh  perf_report.sh  rbuild.sh  rconfigure.sh  rrun.sh  tbuild.sh  tconfigure.sh  trun.sh
src/: camera.h  comptime.h  constants.h  entry.cpp  globals.h  materials.h  math.h  rand.h  render.cpp  render.h  sphere.cpp  sphere.h  types.h  utils.h
tests/: CMakeLists.txt  entry.cpp  thread_cnt.py
